<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	android:padding="6dp">

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:text="@string/resume_from"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/textView1"
		android:layout_below="@+id/textView1"
		android:text="@string/resume_email"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/resume_from"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:text="@string/empty_hint" />

	<TextView
	    android:id="@+id/resume_email"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/textView2"
	    android:layout_alignLeft="@+id/resume_from"
	    android:layout_alignParentRight="true"
	    android:text="@string/empty_hint" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/textView2"
	    android:text="@string/resume_time"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/resume_time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/textView3"
	    android:layout_alignBottom="@+id/textView3"
	    android:layout_alignRight="@+id/resume_email"
	    android:text="@string/empty_hint" />

</RelativeLayout>