<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	android:padding="6dp">

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:text="@string/answer_from"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/textView1"
		android:layout_below="@+id/textView1"
		android:text="@string/answer_time"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/answer_from"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/textView2"
	    android:layout_alignParentRight="true"
	    android:text="@string/empty_hint" />

	<TextView
	    android:id="@+id/answer_time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/textView2"
	    android:layout_alignRight="@+id/answer_from"
	    android:text="@string/empty_hint" />

</RelativeLayout>